--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "description": "",
     "dependencies": {
         "discord.js": "^14.7.1",
-        "dotenv": "^16.0.2"
+        "dotenv": "^16.0.2",
+        "fluent-ffmpeg": "^2.1.2",
+        "openai": "^4.7.1",
+        "whisper-nodejs": "^1.0.0"
     },
     "devDependencies": {
         "cross-env": "^7.0.3",
-        "nodemon": "^2.0.19",
+        "nodemon": "^2.0.22",
         "pkg": "^5.7.0"
     },
     "pkg": {
