--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "discord.js": "^14.7.1",
         "dotenv": "^16.0.2",
         "fluent-ffmpeg": "^2.1.2",
+        "node-fetch": "^3.3.2",
         "openai": "^4.7.1",
         "whisper-nodejs": "^1.0.0"
     },
