--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
         "discord.js": "^14.7.1",
         "dotenv": "^16.0.2",
         "fluent-ffmpeg": "^2.1.2",
+        "fuzzysort": "^2.0.4",
         "node-fetch": "^3.3.2",
         "openai": "^4.7.1",
+        "reverso-api": "^2.22.7",
         "whisper-nodejs": "^1.0.0"
     },
     "devDependencies": {
