--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "description": "",
     "dependencies": {
         "@anthropic-ai/sdk": "^0.21.0",
+        "@google/generative-ai": "^0.11.2",
         "discord.js": "^14.7.1",
         "dotenv": "^16.0.2",
         "fluent-ffmpeg": "^2.1.2",
