--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "discord-bot-boilerplate",
+    "name": "whisper-discord-bot",
     "version": "1.2.0",
     "main": "index.js",
     "bin": "index.js",
@@ -9,7 +9,7 @@
         "dev:watch": "cross-env NODE_ENV=development NODE_NO_WARNINGS=1 nodemon .",
         "build": "pkg ."
     },
-    "author": "Joaquin Giordano <joaquin_giordano@outlook.com>",
+    "author": "James Hall <hi@jameshall.xyz>",
     "license": "ISC",
     "description": "",
     "dependencies": {
